--- a/service-layer/package.json
+++ b/service-layer/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "tester.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {}
 }
