--- a/calendar/package.json
+++ b/calendar/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
