--- a/calendar/package.json
+++ b/calendar/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/rrule": "^6.1.15",
     "@mui/material": "^6.1.10",
     "@mui/x-date-pickers": "^7.23.1",
     "bootstrap": "^5.3.3",
